--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -67,24 +67,23 @@
   <ItemGroup>
     <Compile Include="DefaultMapSaver.cs" />
     <Compile Include="Extensions\MatrixExtensions.cs" />
-    <Compile Include="Extensions\Point3DExtensions.cs" />
+    <Compile Include="Extensions\PointDistanceExtensions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Interfaces\IInterpolationOptions.cs" />
     <Compile Include="Interfaces\IInterpolator.cs" />
     <Compile Include="Interfaces\ILoader.cs" />
     <Compile Include="Interfaces\ISelectorWithDialog.cs" />
     <Compile Include="Interfaces\ISaver.cs" />
-    <Compile Include="KrigingPoint.cs" />
     <Compile Include="Loaders\JsonGridLoader.cs" />
     <Compile Include="Loaders\PointsLoader.cs" />
-    <Compile Include="Matrix\LargeMatrix.cs" />
     <Compile Include="Matrix\Matrix.cs" />
     <Compile Include="Matrix\MatrixBase.cs" />
+    <Compile Include="Matrix\MatrixBuffer.cs" />
+    <Compile Include="Matrix\MatrixMath.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selectors\FileSelector.cs" />
     <Compile Include="Selectors\FolderSelector.cs" />
-    <Compile Include="LargeMatrixStorage.cs" />
     <Compile Include="Variogram\SphericalVariogram.cs" />
     <Compile Include="Variogram\VariogramBase.cs" />
     <Compile Include="Vector3.cs" />
